// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render two column grid 1`] = `
<div>
  <div>
    <div
      class="MuiGrid-root MuiGrid-container"
    >
      <div
        class="MuiGrid-root gridItem MuiGrid-container MuiGrid-spacing-xs-10 MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
      >
        <div
          class="MuiGrid-root column labelColumn MuiGrid-item MuiGrid-grid-xs-2"
          data-testid="two-column-row-label"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 rowLabel"
            data-testid="test-label-1-label"
            style="text-align: right;"
          >
            Test Label 1
          </p>
        </div>
        <div
          class="MuiGrid-root column MuiGrid-item MuiGrid-grid-xs-10"
          data-testid="two-column-row-value"
        >
          <div
            data-testid="test-label-1-value"
            style="text-align: left;"
          >
            Test Value 1
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root gridItem MuiGrid-container MuiGrid-spacing-xs-10 MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
      >
        <div
          class="MuiGrid-root column labelColumn MuiGrid-item MuiGrid-grid-xs-2"
          data-testid="two-column-row-label"
        >
          <div
            class="rowLabel"
            data-testid="row-1-label"
            style="text-align: right;"
          >
            1
          </div>
        </div>
        <div
          class="MuiGrid-root column MuiGrid-item MuiGrid-grid-xs-10"
          data-testid="two-column-row-value"
        >
          <div
            data-testid="row-1-value"
            style="text-align: left;"
          >
            Test Value 1
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render two column grid 2`] = `
<div>
  <div>
    <div
      class="MuiGrid-root MuiGrid-container"
    >
      <div
        class="MuiGrid-root gridItem MuiGrid-container MuiGrid-spacing-xs-10 MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
      >
        <div
          class="MuiGrid-root column labelColumn MuiGrid-item MuiGrid-grid-xs-2"
          data-testid="two-column-row-label"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 rowLabel"
            data-testid="test-label-1-label"
            style="text-align: right;"
          >
            Test Label 1
          </p>
        </div>
        <div
          class="MuiGrid-root column MuiGrid-item MuiGrid-grid-xs-10"
          data-testid="two-column-row-value"
        >
          <div
            data-testid="test-label-1-value"
            style="text-align: right;"
          >
            Test Value 1
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root gridItem MuiGrid-container MuiGrid-spacing-xs-10 MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
      >
        <div
          class="MuiGrid-root column labelColumn MuiGrid-item MuiGrid-grid-xs-2"
          data-testid="two-column-row-label"
        >
          <div
            class="rowLabel"
            data-testid="row-1-label"
            style="text-align: right;"
          >
            1
          </div>
        </div>
        <div
          class="MuiGrid-root column MuiGrid-item MuiGrid-grid-xs-10"
          data-testid="two-column-row-value"
        >
          <div
            data-testid="row-1-value"
            style="text-align: right;"
          >
            Test Value 1
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render two column grid 3`] = `
<div>
  <div>
    <div
      class="MuiGrid-root MuiGrid-container"
    >
      <div
        class="MuiGrid-root gridItem MuiGrid-container MuiGrid-spacing-xs-10 MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
      >
        <div
          class="MuiGrid-root column labelColumn MuiGrid-item MuiGrid-grid-xs-2"
          data-testid="two-column-row-label"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 rowLabel"
            data-testid="test-label-1-label"
            style="text-align: left;"
          >
            Test Label 1
          </p>
        </div>
        <div
          class="MuiGrid-root column MuiGrid-item MuiGrid-grid-xs-10"
          data-testid="two-column-row-value"
        >
          <div
            data-testid="test-label-1-value"
            style="text-align: left;"
          >
            Test Value 1
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root gridItem MuiGrid-container MuiGrid-spacing-xs-10 MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
      >
        <div
          class="MuiGrid-root column labelColumn MuiGrid-item MuiGrid-grid-xs-2"
          data-testid="two-column-row-label"
        >
          <div
            class="rowLabel"
            data-testid="row-1-label"
            style="text-align: left;"
          >
            1
          </div>
        </div>
        <div
          class="MuiGrid-root column MuiGrid-item MuiGrid-grid-xs-10"
          data-testid="two-column-row-value"
        >
          <div
            data-testid="row-1-value"
            style="text-align: left;"
          >
            Test Value 1
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
